network/internet_gateway.tf
resource "aws_internet_gateway" "igw" {
	vpc_id = aws_vpc.honeypot_vpc.id
	tags = { Name = "honeypot-igw" } 
}
